--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,7 +1,10 @@
 pipeline {
   agent {
     docker {
-   image 'your-dockerhub-username/maven-docker-agent-java17:v1'
+      image 'jerry943/maven-docker-agent-java17:v1'
+      // Add these two lines to authenticate the pull
+      registryUrl 'https://index.docker.io/v1/'
+      registryCredentialsId 'docker-cred'
       args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
     }
   }
