resolved issue in stage update deployment

--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -2,24 +2,31 @@ pipeline {
   agent {
     docker {
       image 'jerry943/maven-docker-agent-java17:v1'
-      // Add these two lines to authenticate the pull
       registryUrl 'https://index.docker.io/v1/'
       registryCredentialsId 'docker-cred'
-      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
+      args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
     }
+  }
+  environment {
+     GIT_REPO_NAME = 'Jenkins-ArgoCD-Pipeline'
+     GIT_USER_NAME = 'Harshjerry'
   }
   stages {
     stage('Checkout') {
       steps {
-        sh 'echo passed'
-        //git branch: 'main', url: 'https://github.com/iam-veeramalla/Jenkins-Zero-To-Hero.git'
+        // This stage is handled by the Jenkins UI configuration, but we can verify the checkout
+        sh 'echo "Checkout handled by Jenkins UI, listing workspace contents:"'
+        sh 'ls -l'
       }
     }
     stage('Build and Test') {
       steps {
-        sh 'ls -ltr'
-        // build the project and create a JAR file
-        sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
+        // Change into the repository directory first
+        dir(GIT_REPO_NAME) {
+          sh 'ls -ltr'
+          // build the project and create a JAR file
+          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
+        }
       }
     }
     stage('Static Code Analysis') {
@@ -27,43 +34,48 @@ pipeline {
         SONAR_URL = "http://3.83.145.137:9000"
       }
       steps {
-        withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+        // Change into the repository directory first
+        dir(GIT_REPO_NAME) {
+          withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
+            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+          }
         }
       }
     }
     stage('Build and Push Docker Image') {
       environment {
         DOCKER_IMAGE = "jerry943/ultimate-cicd:${BUILD_NUMBER}"
-        // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
         REGISTRY_CREDENTIALS = credentials('docker-cred')
       }
       steps {
-        script {
-            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
-            def dockerImage = docker.image("${DOCKER_IMAGE}")
-            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
-                dockerImage.push()
-            }
+        // Change into the repository directory first
+        dir(GIT_REPO_NAME) {
+          script {
+              sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
+              def dockerImage = docker.image("${DOCKER_IMAGE}")
+              docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+                  dockerImage.push()
+              }
+          }
         }
       }
     }
     stage('Update Deployment File') {
-        environment {
-         GIT_REPO_NAME = 'Jenkins-ArgoCD-Pipeline'
-         GIT_USER_NAME = 'Harshjerry'
-        }
         steps {
-            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                sh '''
-                  git config user.email "harshdeep1043@gmail.com"
-                  git config user.name "Harshjerry"
-                    BUILD_NUMBER=${BUILD_NUMBER}
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                '''
+            // *** THE IMPORTANT FIX IS HERE ***
+            // Change into the repository directory before running git commands
+            dir(GIT_REPO_NAME) {
+                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                    sh '''
+                      git config user.email "harshdeep1043@gmail.com"
+                      git config user.name "Harshjerry"
+                        BUILD_NUMBER=${BUILD_NUMBER}
+                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                        git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                        git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                    '''
+                }
             }
         }
     }
