--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -61,21 +61,25 @@ pipeline {
       }
     }
     stage('Update Deployment File') {
+        environment {
+         GIT_REPO_NAME = 'Jenkins-ArgoCD-Pipeline' // Your repo name
+         GIT_USER_NAME = 'Harshjerry'              // Your user name
+        }
         steps {
-            // *** THE IMPORTANT FIX IS HERE ***
-            // Change into the repository directory before running git commands
-            dir(GIT_REPO_NAME) {
-                withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                    sh '''
-                      git config user.email "harshdeep1043@gmail.com"
-                      git config user.name "Harshjerry"
-                        BUILD_NUMBER=${BUILD_NUMBER}
-                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                        git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                        git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                    '''
-                }
+            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                sh '''
+                  # THIS IS THE FIX: Change into the correct directory first!
+                  cd ${GIT_REPO_NAME}
+
+                  # Now the rest of the script will work perfectly
+                  git config user.email "harshdeep1043@gmail.com"
+                  git config user.name "Harshjerry"
+                  BUILD_NUMBER=${BUILD_NUMBER}
+                  sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                  git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                  git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                  git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                '''
             }
         }
     }
