--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -50,6 +50,7 @@ pipeline {
         }
       }
     }
+
     stage('Update Deployment File') {
         environment {
             GIT_REPO_NAME = "Jenkins-ArgoCD-Pipeline"
@@ -58,9 +59,15 @@ pipeline {
         steps {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
-                    git config user.email "harshdeep1043@gmail.com"
-                    git config user.name "harsh"
+                    # Change directory back to the root of the workspace where .git is located
+                    cd ${WORKSPACE}
+
+                    # Now, run the git commands from the correct directory
+                    git config user.email "abhishek.xyz@gmail.com"
+                    git config user.name "Abhishek Veeramalla"
                     BUILD_NUMBER=${BUILD_NUMBER}
+
+                    # Use the full path from the workspace root to the file
                     sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                     git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
