--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -28,7 +28,7 @@ pipeline {
     stage('Static Code Analysis') {
       // ... (no changes here)
       environment {
-        SONAR_URL = "http://3.83.145.137:9000"
+        SONAR_URL = "http://3.82.248.0:9000/"
       }
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
