--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -11,14 +11,21 @@ pipeline {
   stages {
     stage('Checkout') {
       steps {
-        // This is the CRITICAL first step.
-        // It performs a full clone and creates the .git directory.
+        // --- THIS IS THE CRITICAL FIX ---
+        // It deletes the workspace from the previous build, including any
+        // files owned by 'root', before attempting to check out new code.
+        cleanWs()
+
+        // This will now succeed because the workspace is empty and writable
+        // by the default Jenkins user who performs the checkout.
         checkout scm
 
-        // This command helps you verify the .git directory exists after checkout.
         sh 'echo "Workspace after checkout:" && ls -la'
       }
     }
+
+    // ... All your other stages (Build, Sonar, Docker Push) remain exactly the same ...
+    
     stage('Build and Test') {
       steps {
         sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
@@ -26,7 +33,7 @@ pipeline {
     }
     stage('Static Code Analysis') {
       environment {
-        SONAR_URL = "http://44.201.166.87:9000"
+        SONAR_URL = "http://3.83.145.137:9000"
       }
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
@@ -47,7 +54,7 @@ pipeline {
             cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
             docker build -t ${DOCKER_IMAGE} .
           '''
-          def dockerImage = docker.image("${DOCKER_IMAGE}")
+          def dockerImage = docker.image("${DOCK_IMAGE}")
           docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
             dockerImage.push()
           }
@@ -55,39 +62,31 @@ pipeline {
       }
     }
 
-   
-       stage('Update Deployment File') {
-        environment {
-            GIT_REPO_NAME = "Jenkins-ArgoCD-Pipeline"
-            GIT_USER_NAME = "Harshjerry"
+    stage('Update Deployment File') {
+      environment {
+        GIT_REPO_NAME = "Jenkins-ArgoCD-Pipeline"
+        GIT_USER_NAME = "Harshjerry"
+      }
+      steps {
+        withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+          sh '''
+            cd ${WORKSPACE}
+            # This is STILL needed because this 'sh' step runs as root
+            chown -R root:root .
+            
+            git config user.email "harshdeep1043@gmail.com"
+            git config user.name "jerry7"
+            
+            # This is also STILL needed to commit to a branch
+            git checkout main
+            
+            sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+            git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+            git commit -m "CI: Update deployment image to version ${BUILD_NUMBER}"
+            git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} main
+          '''
         }
-        steps {
-            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                sh '''
-                    cd ${WORKSPACE}
-                    echo "Taking ownership of workspace files..."
-                    chown -R root:root .
-                    
-                    echo "Configuring git user..."
-                    git config user.email "harshdeep1043@gmail.com"
-                    git config user.name "jerry7"
-
-                    # --- THIS IS THE FIX ---
-                    # Tell git to switch from the "detached HEAD" state to the actual 'main' branch
-                    # so that we can commit changes to it.
-                    echo "Checking out the main branch to be able to commit..."
-                    git checkout main
-                    
-                    echo "Updating deployment file and pushing to git..."
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                    
-                    # Push the main branch back to the GitHub repository
-                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} main
-                '''
-            }
-        }
+      }
     }
   }
 }
