--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -78,19 +78,19 @@ pipeline {
             echo "Updating deployment file and pushing to git..."
             sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
 
-            # Check if there are any changes to commit
-            if ! git diff --quiet java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml; then
-              echo "Changes detected in deployment.yml. Committing and pushing..."
+            # Check if anything changed before committing
+            if ! git diff --quiet; then
               git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
               git commit -m "Update deployment image to version ${BUILD_NUMBER}"
               git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} main
             else
-              echo "No changes to commit in deployment.yml."
+              echo "No changes to commit."
             fi
           '''
         }
       }
     }
+  }
 
   post {
     always {
